LibNoDaveConnectionLibrary/Communication/LibNoDave/libnodave.net.cs


#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveNewConnection")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewConnection")]
#endif
            protected static extern IntPtr daveNewConnection32(IntPtr di, int MPI, int rack, int slot);


            public daveConnection(daveInterface di, int MPI, int rack, int slot)
            {
                if (IntPtr.Size == 8)
                    pointer = daveNewConnection64(di.pointer, MPI, rack, slot);
                else
                    pointer = daveNewConnection32(di.pointer, MPI, rack, slot);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveNewExtendedConnection")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewExtendedConnection")]
#endif
            protected static extern IntPtr daveNewExtendedConnection64(IntPtr di, byte[] destination, int DestinationIsIP, int rack, int slot, int routing, int routingSubnetFirst, int routingSubnetSecond, int routingRack, int routingSlot, byte[] routingDestination, int routingDestinationIsIP, int ConnectionType, int routingConnectionType);


#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveNewExtendedConnection")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewExtendedConnection")]
#endif
            protected static extern IntPtr daveNewExtendedConnection32(IntPtr di, byte[] destination, int DestinationIsIP, int rack, int slot, int routing, int routingSubnetFirst, int routingSubnetSecond, int routingRack, int routingSlot, byte[] routingDestination, int routingDestinationIsIP, int ConnectionType, int routingConnectionType);


            public daveConnection(daveInterface di, int MPI, string IP, bool DestinationIsIP, int rack, int slot, bool routing, int routingSubnetFirst, int routingSubnetSecond, int routingRack, int routingSlot, string routingDestination, int PLCConnectionType, int routingPLCConnectionType)
            {
                string[] ip = IP.Split('.');
                byte[] myDestination;
                int myDestinationIsIP = 0;
                if (ip.Length < 4 || !DestinationIsIP)
                {
                    myDestination = new byte[] { (byte)Convert.ToInt32(MPI) };
                }
                else
                {
                    myDestinationIsIP = 1;
                    myDestination = new byte[] { (byte)Convert.ToInt32(ip[0]), (byte)Convert.ToInt32(ip[1]), (byte)Convert.ToInt32(ip[2]), (byte)Convert.ToInt32(ip[3]) };
                }
                routingDestination = routingDestination ?? "";
                ip = routingDestination.Split('.');
                byte[] myRoutingDestination = new byte[4];
                int routingDestinationIsIP = 0;
                if (ip.Length < 4)
                {
                    try
                    { myRoutingDestination = new byte[] { (byte)Convert.ToInt32(routingDestination) }; }
                    catch (Exception)
                    { }
                }
                else
                {
                    routingDestinationIsIP = 1;
                    string[] rip = routingDestination.Split('.');
                    if (rip.Length == 4)
                        myRoutingDestination = new byte[] { (byte)Convert.ToInt32(rip[0]), (byte)Convert.ToInt32(rip[1]), (byte)Convert.ToInt32(rip[2]), (byte)Convert.ToInt32(rip[3]) };
                }
                if (IntPtr.Size == 8)
                    pointer = daveNewExtendedConnection64(di.pointer, myDestination, myDestinationIsIP, rack, slot, Convert.ToInt32(routing), routingSubnetFirst, routingSubnetSecond, routingRack, routingSlot, myRoutingDestination, routingDestinationIsIP, PLCConnectionType, routingPLCConnectionType);
                else
                    pointer = daveNewExtendedConnection32(di.pointer, myDestination, myDestinationIsIP, rack, slot, Convert.ToInt32(routing), routingSubnetFirst, routingSubnetSecond, routingRack, routingSlot, myRoutingDestination, routingDestinationIsIP, PLCConnectionType, routingPLCConnectionType);
            }

            /* This wa here to test inheritance
                ~daveConnection(){
                    Console.WriteLine("~daveConnection()"+pointer);
                    daveFree(pointer);
                    daveFree(pointer);
                }
            */
#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveConnectPLC")]
#else
            [DllImport("__Internal", EntryPoint = "daveConnectPLC")]
#endif
            protected static extern int daveConnectPLC64(IntPtr dc);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveConnectPLC")]
#else
            [DllImport("__Internal", EntryPoint = "daveConnectPLC")]
#endif
            protected static extern int daveConnectPLC32(IntPtr dc);
            public int connectPLC()
            {
                if (IntPtr.Size == 8)
                    return daveConnectPLC64(pointer);
                else
                    return daveConnectPLC32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveDisconnectPLC")]
#else
            [DllImport("__Internal", EntryPoint = "daveDisconnectPLC")]
#endif
            protected static extern int daveDisconnectPLC64(IntPtr dc);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveDisconnectPLC")]
#else
            [DllImport("__Internal", EntryPoint = "daveDisconnectPLC")]
#endif
            protected static extern int daveDisconnectPLC32(IntPtr dc);
            public int disconnectPLC()
            {
                if (IntPtr.Size == 8)
                    return daveDisconnectPLC64(pointer);
                return daveDisconnectPLC32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveReadBytes")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadBytes")]
#endif
            protected static extern int daveReadBytes64(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveReadBytes")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadBytes")]
#endif
            protected static extern int daveReadBytes32(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
            public int readBytes(int area, int DBnumber, int start, int len, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveReadBytes64(pointer, area, DBnumber, start, len, buffer);
                return daveReadBytes32(pointer, area, DBnumber, start, len, buffer);
            }


            //[DllImport("libnodave_jfkmod.dll"/*, PreserveSig=false */ )]
            //    protected static extern int daveReadManyBytes(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
            //public int readManyBytes(int area, int DBnumber, int start, int len, byte[] buffer) {
            //    return daveReadManyBytes(pointer, area, DBnumber, start, len, buffer);
            //}

            //Inserted a .NET implementation of readManyBytes, because the libNoDave one did not work!
            public int readManyBytes(int area, int DBnumber, int start, int len, ref byte[] buffer)
            {
                int res, readLen;
                int pos = 0;

                int pdulen = getMaxPDULen();

                while (len > 0)
                {
                    if (len > pdulen - 18) readLen = pdulen - 18; else readLen = len;

                    byte[] tmp = new byte[readLen];

                    res = readBytes(area, DBnumber, start + pos, readLen, tmp);
                    if (res != 0) return res;

                    tmp.CopyTo(buffer, pos);

                    len -= readLen;
                    pos += readLen;
                }

                return 0;
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveReadBits")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadBits")]
#endif
            protected static extern int daveReadBits64(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveReadBits")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadBits")]
#endif
            protected static extern int daveReadBits32(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
            public int readBits(int area, int DBnumber, int start, int len, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveReadBits64(pointer, area, DBnumber, start, len, buffer);
                return daveReadBits32(pointer, area, DBnumber, start, len, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveWriteBytes")]
#else
            [DllImport("__Internal", EntryPoint = "daveWriteBytes")]
#endif
            protected static extern int daveWriteBytes64(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveWriteBytes")]
#else
            [DllImport("__Internal", EntryPoint = "daveWriteBytes")]
#endif
            protected static extern int daveWriteBytes32(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
            public int writeBytes(int area, int DBnumber, int start, int len, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveWriteBytes64(pointer, area, DBnumber, start, len, buffer);
                return daveWriteBytes32(pointer, area, DBnumber, start, len, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveWriteManyBytes")]
#else
            [DllImport("__Internal", EntryPoint = "daveWriteManyBytes")]
#endif
            protected static extern int daveWriteManyBytes64(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveWriteManyBytes")]
#else
            [DllImport("__Internal", EntryPoint = "daveWriteManyBytes")]
#endif
            protected static extern int daveWriteManyBytes32(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
            public int writeManyBytes(int area, int DBnumber, int start, int len, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveWriteManyBytes64(pointer, area, DBnumber, start, len, buffer);
                return daveWriteManyBytes32(pointer, area, DBnumber, start, len, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveWriteBits")]
#else
            [DllImport("__Internal", EntryPoint = "daveWriteBits")]
#endif
            protected static extern int daveWriteBits64(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
